# longfellow-zk

./: .gitignore  LICENSE  build_xcframework.sh
lib/: CMakeLists.txt
lib/CMake/: proofs.cmake
lib/algebra/: bogorng.h  crt_test.cc  fp2.h  fp24.h  fp24_6.h  fp24_6_test.cc  fp_generic.h  fp_test.cc  limb.h  nat.h  nat_test.cc  reed_solomon_extension.h  reed_solomon_extension_test.cc  sysdep.h
lib/arrays/: eqs_test.cc
lib/circuits/cbor_parser/: cbor.h  scan.h  scan_test.cc
lib/circuits/cbor_parser_v2/: cbor.h  cbor_byte_decoder.h
lib/circuits/ecdsa/: CMakeLists.txt
lib/circuits/logic/: bit_adder_test.cc  bit_plucker_test.cc  counter_test.cc  logic.h  logic_test.cc  unary.h
lib/circuits/tests/pq/ml_dsa/: CMakeLists.txt  ml_dsa_44.h  ml_dsa_44_circuit_test.cc  ml_dsa_44_eval_test.cc  ml_dsa_44_examples.cc  ml_dsa_44_examples.h  ml_dsa_44_types.cc  ml_dsa_44_types.h  ml_dsa_44_witness.h  ml_dsa_44_witness_test.cc  ml_dsa_ref.cc  ml_dsa_ref.h  ml_dsa_ref_test.cc  ml_dsa_ref_test_vectors.inc  ml_dsa_ref_test_vectors_pkdecode.inc  ml_dsa_ref_test_vectors_sigdecode.inc  sigdecode_test_vectors.inc
lib/gf2k/: gf2_128.h  gf2_128_test.cc
lib/ligero/: ligero_prover.h
lib/proto/: CMakeLists.txt  circuit.h  circuit_test.cc
lib/random/: random_test.cc
lib/sumcheck/: circuit.h  equad.h  hquad.h  prover_layers.h  quad.h  quad_test.cc  sumcheck_test.cc  verifier_layers.h
lib/testing/: CMakeLists.txt
lib/util/: CMakeLists.txt  crypto.cc  crypto.h  log.cc  log.h
lib/zk/: zk_prover.h  zk_test.cc
scripts/: build_xcframework.sh  multipaz_build_xcframework.sh
(+34 files in other folders)
